# RuMROS

./: .gitignore  README.md  inertia_matrix.py  launch.sh
pyecoregen/: cli.py  ecore.py
pyecoregen/templates/: index.html.tpl  module_utilities.tpl
ros/: mqtt-client-params.yaml
ros/rumros/: CMakeLists.txt  package.xml
ros/rumros/launch/: lager.launch.py  robot_state_publisher.launch.py  ros_gz_bridge_helper.py  spawn_turtlebot3.launch.py  spawn_ugv_launch.py  spawn_x3_quadcopter_launch.py
ros/rumros/models/RaspRover/: model.sdf  model.sdf.xacro
ros/rumros/models/RaspRover/meshes/ugv_rover/: base_lidar_link.dae  base_link.dae  base_link.stl  left_down_wheel_link.dae  left_up_wheel_link.dae  pt_base_link.dae  pt_link1.dae  pt_link2.dae  right_down_wheel_link.dae  right_up_wheel_link.dae
ros/rumros/models/X3 UAV Config 5/: model.sdf.xacro
ros/rumros/models/floor/: model.config  model.sdf
ros/rumros/models/floor/meshes/: floor.blend  floor.blend1  floor.dae
ros/rumros/models/grey_wall/: model.sdf
ros/rumros/models/ownrobot/: model.config  ownrobot.sdf
ros/rumros/models/turtlebot3_common/new/: lds.blend  lds.dae  left-tire.dae
ros/rumros/models/turtlebot3_waffle/: model.sdf  model.sdf.xacro
ros/rumros/models/wall/: model.config  model.sdf
ros/rumros/models/wall/meshes/: wall.blend  wall.blend1  wall.dae
ros/rumros/params/: mapper_params_lifelong.yaml  ugv_bridge_template.yaml  x3_quadcopter_bridge_template.yaml
ros/rumros/resources/media/materials/scripts/: gazebo.material
ros/rumros/rviz/: tb3_gazebo.rviz
ros/rumros/src/: map_saver.cpp  pose_correction.cpp  pose_offsetter.cpp
ros/rumros/urdf/: turtlebot3_waffle.urdf
ros/rumros/worlds/: depot.world  test.world
runtimemodel/: .gitignore  README.md  build.gradle  gradle.properties
runtimemodel/mqtt_client/: config.yaml  launch_mqtt_client.sh
runtimemodel/ros2_serialization_utils/: CMakeLists.txt  package.xml
runtimemodel/ros2_serialization_utils/src/: ros2_serialization_utils.cpp
runtimemodel/src/main/jastadd/: Actions.jadd  AreaImpl.jrag  DroneImpl.jrag  GetState.jrag  Init.jrag  Model.connect  Model.relast  Position.jrag  RobotImpl.jrag  RobotInArea.jrag  ToString.jadd
runtimemodel/src/main/java/de/tudresden/inf/st/rumros/runtimemodel/: ActionResultType.java  Connection.java  EmptyResult.java  ModelMain.java  ROS2SerializeUtils.java
runtimemodel/src/main/resources/: mqtt-connections.json
webapp/: config.py  mobileRTM.py
webapp/templates/: model.html
