<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rumros</name>
  <version>1.0.0</version>
  <description>
    Runtime-model driven ROS
  </description>
  <maintainer email="sebastian.goetz1@tu-dresden.de">Sebastian Goetz</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://st.inf.tu-dresden.de/sgoetz</url>
  <url type="repository">https://github.com/sebastiangoetz/rumros</url>
  <url type="bugtracker">https://github.com/sebastiangoetz/rumros/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>slam_toolbox</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <!--gazebo_ros gazebo_model_path="${prefix}/models"/-->
     <env name="GAZEBO_RESOURCE_PATH" value="${prefix}/resources"/>
  </export>
</package>
