<?xml version="1.0"?>
<package format="3">
  <name>ros2_serialization_utils</name>
  <version>1.0.0</version>
  <description>Serialization utils package for the java project ragconnect-runtimemodel</description>
  <maintainer email="your.email@example.com">Edgar Solf</maintainer>
  <license>Apache 2.0</license>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_runtime_cpp</depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

